# website-scraper

./: .env.example  .gitignore  .replit  README.md  main.py  pyproject.toml
api/: __init__.py  config.py  main.py  pyproject.toml  pyrightconfig.json
api/models/: base.py
api/routes/graphql/: __init__.py  schema.py
api/routes/rest/: __init__.py  auth.py  health.py  posts.py  users.py
api/routes/trpc/: __init__.py  router.py
api/tests/: test_imports.py
api/utils/: health_checks.py  logger.py
api/utils/helpers/: entity_detection.py  geo_detection.py  url_parsing.py
api/utils/monitoring/: error_handlers.py  error_tracking.py
api/utils/storage/: maxmind_geo.py  s3_bucket.py
app/: .eslintrc.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.tsx
app/static/css/: bootstrap-agent-dark-theme.min.css  custom.css
app/static/html/: analysis_results.html  base.html  error.html  index.html  loading.html
app/static/js/: main.js  url-validator.js
docs/: analyzeEndpoint.mdx  api.md  app.md  dev_guide.md  integration.md  repo_rules.md
docs/dev/: app.md  integration.md  repo_rules.md
docs/planning/: acceptance_criteria.md  overview.md  user_stories.md
